# adaptive_rest

./: CLAUDE.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: command.rs  logger.rs  main.rs  util.rs
src/app/: app_state.rs  mod.rs  ui.rs
src/server/: endpoint.rs  mod.rs
