[package]
name = "adaptable_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
actix-web = "4.12.1"
thiserror = "2.0.17"
log = { version = "0.4.29", features = ["std"] }
clap = { version = "4.5.53", features = ["derive"] }
shlex = { version = "1.3.0" }
serde_json = "1.0.148"

[lints.clippy]
unwrap_used = "deny"
dbg_macro = "warn"
todo = "deny"
